Update and rename style.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+   <link rel="stylesheet" href="style.css"/> <body>
     <h1> TEAM FORTRESS 2<img src="https://icon-library.com/images/teamfortress-2-icon/teamfortress-2-icon-21.jpg"/></h1>
     <main><h2> what is team fortress?</h2>
     <p>team fortress is a strategic battleground game full of meme and different types of classes like: scout heavy demoman spy... and other classes(10 classes but 1 is the demoknight)</p>
